--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,26 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MusicPlayerActivity"
+            android:name=".player.MusicPlayerActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".MusicActivity"
+            android:name=".player.MusicActivity"
             android:label="@string/app_name" >
         </activity>
+
         <service android:name=".MyServicePlay" />
+
+        <activity
+            android:name=".player.MediaListActivity"
+            android:label="@string/title_activity_media_list" >
+        </activity>
     </application>
 
 </manifest>
